--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 </head>
 <body>
-    <header>FORMADORESFLIX </header>
-    <h1>Os melhores filmes de Ficção </h1>
-    <p>Assista as recomendações da semana</p>
+    <header>FormadoresFlix </header>
+    <h1>O melhor filme de todos</h1>
+    <p>#Shrek</p>
     
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6XUCTjD4Njo?si=D3l0rzvnGS5_Ee1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CwXOrWvPBPk?si=6O-4XUgueV_A4PE4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
 </html>
