--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>FormadoresFlix </header>
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>O melhor filme de todos</h1>
             <p>#Shrek</p>
         </div>
