--- a/index.html
+++ b/index.html
@@ -31,6 +31,39 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+    <section>
+        <h2>Outras recomendações</h2>
+        <div>
+            <!--Cars-->
+            <a href="https://www.youtube.com/watch?v=LSnRL1KLdks">
+                <img src="https://img.youtube.com/vi/LSnRL1KLdks/maxresdefault.jpg" alt="">
+            </a>
+
+            <!--Kung fu Pand-->
+            <a href="https://www.youtube.com/watch?v=NRc-ze7Wrxw">
+                <img src="image/Panda.png" alt="">
+            </a>
+
+            <!--Como treinar seu drago-->
+            <a href="https://www.youtube.com/watch?v=HIbwgbbJzSs&t=4s">
+                <img src="image/Dragao.png" alt="">
+            </a>
+
+            <!--minions-->
+            <a href="https://www.youtube.com/watch?v=_BlOydwSATk">
+                <img src="image/minions.png" alt="">
+            </a>
+
+            <!--stich-->
+            <a href="https://www.youtube.com/watch?v=mpA6diMMA90">
+                <img src="image/liloestitch.png" alt="">
+            </a>
+
+        </div>
+
+    </section>
+
 </body>
 
 </html>
