--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>FormadoresFlix </header>
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>O melhor filme de todos</h1>
             <p>#Shrek</p>
