--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section>
         <h2>Outras recomendações</h2>
-        <div>
+        <div class="outraRecomendacoes">
             <!--Cars-->
             <a href="https://www.youtube.com/watch?v=LSnRL1KLdks">
                 <img src="https://img.youtube.com/vi/LSnRL1KLdks/maxresdefault.jpg" alt="">
